# iMi

./: .claude-flow.pid  .gitignore  .mise.toml  .plane.env  AGENTS.md  Braindump.md  CODE_REVIEW_REPORT.md  Cargo.toml  Cargo.toml.template  GEMINI.md  GOD.md  IMPLEMENTATION_REPORT.md  INSTALL.md  LICENSE  QUICKSTART.sh  README.md  RUNTHROUGH.md  SKILL_CREATED.md  TASK.md  TESTING_SUMMARY.md  bump_version.sh  iMi-dev-and-business-ideation.txt  mise.toml  test_close_command.sh
.bmad/: config.yaml  sprint-status.yaml
.claude/: settings.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.claude/checkpoints/: 1767737589.json  1767737648.json  1767737651.json  1767737723.json  1767737773.json  1767737976.json  1767738019.json  1767781889.json  1767781913.json  1767781941.json  1767786277.json  1767786290.json  1767786302.json  1767786315.json  1767957599.json  1767957618.json  1767957630.json  1769696358.json  1769696404.json  1769696408.json  1769699573.json  1769699580.json  1769699583.json  1769699901.json  1769699904.json  1769699932.json  1769699935.json  1769699960.json  1769699962.json  1769699989.json  1769699992.json  1769699995.json  1769699998.json  1769700001.json  1769700004.json  1769700192.json  1769700195.json  1769700388.json  1769700391.json  1769711481.json  (+127 more)
.codex/: auth.json  history.jsonl  models_cache.json  version.json
.iMi/: registry.toml
.mise/: tasks.toml
_bmad-output/v3/: 01-product-brief.md  02-prd.md  03-architecture.md  04-epics-and-stories.md  README.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml
_bmad/_config/ides/: codex.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmb/agents/: agent-builder.md  module-builder.md  workflow-builder.md
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
archive/sqlite-migration/docs/: migration-sqlite-to-postgres.md
bmad/: config.yaml
bmad-legacy/: sprint-status.yaml  workflow-status.yaml
coverage_reports/: tarpaulin-report.html  tarpaulin-report.json
docs/: DOCUMENTATION_TEST_COVERAGE_REPORT.md  FEAT_RULES.md  INIT_RULES.md  JSON_OUTPUT.md  MISE_TASKS.md  PRD.md  SUMMARY.md  TEST_FIXES_SUMMARY.md  api-contracts.md  architecture-imi-project-registry.md  bmm-workflow-status.yaml  component-skill-dependency-map.md  identity-service-architecture.md  migration-complete.md  phase1-postgres-setup-complete.md
docs/.bmad/: sprint-status.yml
docs/bmad/: legacy-plane-ticket-map-2026-02-06.json  legacy-plane-ticket-map-2026-02-06.md  sprint-plan-imi-2026-01-27.md  user-agent-usage-audit-2026-02-06.md  workspace-office-rules-2026-02-06.md
docs/journal/: 2025-10-27-2220-enhanced-list-final-report.md  2025-10-27-2220-task.md
docs/journal/0.1.0/: TESTING_STRATEGY.md  TEST_EXECUTION_GUIDE.md
docs/journal/0.1.0/2025-09-06/: PATH_VALIDATION_REPORT.md  QUALITY_ANALYSIS_REPORT.md
docs/session/: imi-init-implementation-summary.md  task.md
docs/stories/: STORY-001.md
docs/threads/2025-10-29/: 0524-TASK.md
docs/threads/2025-11-02/: 1729-TASK.md
mcp-server/: .env.example  .gitignore  CLAUDE_DESKTOP_SETUP.md  README.md  pyproject.toml
mcp-server/src/imi_mcp/: __init__.py  __main__.py  cli_wrapper.py  config.py  schemas.py  server.py  tools.py
migrations/: 001_create_schema.sql  002_functions_and_helpers.sql  003_identity_system.sql  999_rollback.sql  README.md  examples.sql
scripts/: psql-imi.sh  register-projects-from-filesystem.sh  run-prune-tests.sh
src/: cli.rs  config.rs  context.rs  database.rs  error.rs  fuzzy.rs  git.rs  init.rs  lib.rs  local.rs  main.rs  monitor.rs  worktree.rs
src/commands/: doctor.rs  mod.rs  registry.rs
src/commands/project/: config.rs  create.rs  mod.rs  templates.rs
src/github/: client.rs  mod.rs
starship/: imi-status.sh  starship-module.sh  starship.toml
tests/: PRUNE_TEST_DOCUMENTATION.md  PRUNE_TEST_GUIDE.md  PRUNE_TEST_SUMMARY.md  REGRESSION_TESTS.md  cli_init_integration.rs  close_command_test.rs  comprehensive_init_tests.rs  comprehensive_test_runner.rs  database_tests.rs  docs_coverage_orchestrator.rs  docs_feat_rules_coverage.rs  docs_init_rules_coverage.rs  enhanced_config_tests.rs  enhanced_database_tests.rs  enhanced_error_tests.rs  enhanced_git_tests.rs  enhanced_init_tests.rs  error_scenario_comprehensive.rs  git_tests.rs  init_cli_behavior_tests.rs  init_cli_patch.rs  init_command_spec.rs  init_database_integration.rs  init_rules_tests.rs  init_tdd_comprehensive.rs  init_test_summary.rs  init_tests.rs  integration_tests_comprehensive.rs  list_command_enhanced_tests.rs  mod.rs  monitor_tests.rs  path_construction_validation_tests.rs  property_based_tests.rs  prune_fix_tests.rs  test_architecture_master.rs  test_execution_framework.rs  test_utilities.rs  unit_tests_comprehensive.rs  worktree_status_fix_test.rs  worktree_tests.rs
tests/common/: mod.rs
