[package]
name = "imi"
version = "0.1.0"
edition = "2021"
authors = ["Jarad DeLorenzo <jarad@33god.ai>"]
description = "iMi Git Worktree Management Tool - Component of 33GOD Agentic Software Pipeline"
license = "MIT"
repository = "https://github.com/33god/imi"
keywords = ["git", "worktree", "cli", "workflow", "agents"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "imi"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# Git operations
git2 = "0.18"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"

# Utilities
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# File system operations
dirs = "5.0"

# Real-time monitoring
notify = "6.1"

# Terminal output
colored = "2.1"
indicatif = "0.17"

# Process management
which = "6.0"

# Path manipulation
pathdiff = "0.2"

# Regular expressions
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true