[package]
name = "iMi"
version = "0.1.0"
edition = "2021"
authors = ["Jarad DeLorenzo <jaradd@gmail.com>"]
description = "iMi - Decentralized git worktree management tool built from the ground up for distributed agentic workflows."
license = "MIT"
repository = "https://github.com/delorenj/iMi"
keywords = [
  "decentralized",
  "distributed",
  "git",
  "worktree",
  "cli",
  "workflow",
  "agents",
]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "iMi"
path = "src/main.rs"

[lib]
name = "imi"
path = "src/lib.rs"

[features]
testing = []

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# Git operations
git2 = "0.18"

# Database
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "uuid",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"

# Utilities
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# File system operations
dirs = "5.0"

# Real-time monitoring
notify = "6.1"

# Terminal output
colored = "2.1"
indicatif = "0.17"

# Process management
which = "6.0"

# Path manipulation
pathdiff = "0.2"

# Regular expressions
regex = "1.10"
csv = "1.1"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
serial_test = "0.9.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

